Add services for Infrastructure project

--- a/TechHub.Web/appsettings.Development.json
+++ b/TechHub.Web/appsettings.Development.json
@@ -21,5 +21,8 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "ConnectionStrings": {
+    "TechHubConnection": "Server=(localdb)\\mssqllocaldb;Database=TechHub2023;Trusted_Connection=True;"
   }
 }
