--- a/TechHub.Infrastructure/TechHub.Infrastructure.csproj
+++ b/TechHub.Infrastructure/TechHub.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="DNTPersianUtils.Core" Version="5.5.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
